<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UNOZAR</string>
    <string name="alias">Alias</string>
    <string name="email">Correo electrónico</string>
    <string name="new_mail">Nuevo correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="old_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="registered">¿Ya está registrado?</string>
    <string name="not_registered">¿No está registrado?</string>
    <string name="menu">Menu</string>
    <string name="public_game">Partida pública</string>
    <string name="private_game">Partida privada</string>
    <string name="choose_friend">Escoja un amigo</string>
    <string name="choose_avatar">Elija un avatar</string>
    <string name="choose_board">Elija un tablero</string>
    <string name="choose_card">Elija un reverso de carta</string>
    <string name="chosen_card">Elegida</string>
    <string name="your_turn">Su turno</string>
    <string name="not_your_turn">No es su turno</string>
    <string name="not_owner">No es el dueño de la sala</string>
    <string name="not_enough_players">Faltan jugadores</string>
    <string name="purchase_in_progress">Había una compra en proceso, inténtelo de nuevo</string>
    <string name="avatar_in_use">Ya está usando ese avatar</string>
    <string name="your_cards">%1$s Cartas</string>
    <string name="time_left">Tiempo restante: %1$s</string>
    <string name="players_ready">Jugadores %1$s/%2$s</string>
    <string name="bet">Apuesta %1$s</string>
    <string name="my_id">Id: %1$s</string>
    <string name="public_matches">Partidas públicas</string>
    <string name="private_matches">Partidas privadas</string>
    <string name="played">Jugadas: </string>
    <string name="won">Ganadas: </string>
    <string name="kicked">Ha sido expulsado de la partida por inactividad</string>
    <string name="cant_play">No puede jugar esa carta</string>
    <string name="already_pressed">Ya lo ha pulsado</string>
    <string name="wrong_time" tools:ignore="Typos">No es el momento, va a ser penalizado</string>
    <string name="can_play">Tiene cartas que puede poner</string>
    <string name="error_happened">Ha ocurrido un error</string>
    <string name="not_enough_money">No puede permitírselo</string>
    <string name="already_purchased">Comprado</string>
    <string name="game_full">La sala está llena</string>
    <string name="avatars">Avatares</string>
    <string name="boards">Tableros</string>
    <string name="cards">Cartas</string>
    <string name="buy">Comprar</string>
    <string name="avatar_price">250</string>
    <string name="board_price">500</string>
    <string name="card_price">750</string>
    <string name="priv">Privada</string>
    <string name="pub">Pública</string>
    <string name="img">Imagen</string>
    <!-- MENU OPTIONS -->
    <string name="friends">Amigos</string>
    <string name="profile">Perfil</string>
    <string name="pause">Pausa</string>
    <string name="exit">Salir</string>
    <string name="logout">Cerrar sesión</string>
    <string name="invite_friend">Invitar amigo</string>
    <string name="see_profile">Ver perfil</string>
    <string name="delete_friend">Eliminar</string>
    <!-- BUTTON TEXT -->
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="play_card">Poner carta</string>
    <string name="draw_card">Robar carta</string>
    <string name="create">Crear partida</string>
    <string name="change">Cambiar</string>
    <string name="cancel">Cancelar</string>
    <string name="change_email">Cambiar correo electrónico</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="change_avatar">Cambiar avatar</string>
    <string name="change_board">Cambiar tablero</string>
    <string name="change_reverse">Cambiar reverso</string>
    <string name="daily_price">Regalo diario</string>
    <string name="shop">Tienda</string>
    <string name="add_friend">Añadir amigo</string>
    <string name="go_back">Volver</string>
    <string name="join_with_code">Unirse con código</string>
    <string name="create_match">Crear partida</string>
    <string name="search_public">Buscar partida pública</string>
    <!-- DIALOG TEXT -->
    <string name="alert">¡Cuidado!</string>
    <string name="defeat">DERROTA</string>
    <string name="victory">¡VICTORIA!</string>
    <string name="congratulations">¡Enhorabuena!</string>
    <string name="new_alias">Nuevo alias</string>
    <string name="price_message">Ha ganado %1$s monedas</string>
    <string name="choose">Elija</string>
    <string name="choose_color">Elija un color</string>
    <string name="code">Escriba aquí el código de la partida a la que desea unirse</string>
    <string name="set_initial_bet">Apuesta de la partida</string>
    <string name="add_friend_message">Escriba aquí el email de su amigo</string>
    <string name="add_to_game">¿Quiere invitar a %1$s a la partida?</string>
    <string name="delete_friend_message">¿Quiere eliminar a este jugador de su lista de amigos? </string>
    <string name="exit_room_message">¿Quiere abandonar la sala? </string>
    <string name="exit_match_message">¿Quiere abandonar la partida? </string>
    <string name="delete_account_alert_message">Está a punto de eliminar su cuenta de forma permanente, ¿desea continuar?</string>
    <string name="email_change_alert_message">Está a punto de cambiar el correo electrónico asociado a su cuenta, ¿desea continuar?</string>
    <string name="password_change_alert_message">Está a punto de cambiar la contraseña de su cuenta, ¿desea continuar?</string>
    <string name="avatar_change_alert_message">Está a punto de cambiar el avatar de su cuenta, ¿desea continuar?</string>
    <string name="board_change_alert_message">Está a punto de cambiar el tablero de la partida, ¿desea continuar?</string>
    <string name="cards_change_alert_message">Está a punto de cambiar el reverso de las cartas en la partida, ¿desea continuar?</string>
    <string name="create_match_dialog">¿Quiere crear una partida privada o pública?</string>
    <string name="number_of_players">Número de jugadores</string>
    <string name="number_of_bots">Número de bots</string>
    <!-- DIALOG BUTTONS -->
    <string name="alert_possitive_button">Sí</string>
    <string name="alert_negative_button">No</string>
    <string name="add_button">Añadir</string>
    <string name="create_button">Crear</string>
    <string name="join_button">Unirme</string>
    <string name="delete_button">Borrar</string>
    <string name="red">Rojo</string>
    <string name="green">Verde</string>
    <string name="yellow">Amarillo</string>
    <string name="blue">Azul</string>
    <!-- INPUT ERRORS -->
    <string name="alias_format_error">Escriba un alias válido</string>
    <string name="alias_size_error">El alias debe tener como máxino 15 caracteres</string>
    <string name="email_format_error">Escriba un email válido</string>
    <string name="password_format_error">Escriba una contraseña válida</string>
    <string name="different_passwords">Las contraseñas no coinciden</string>
    <!-- SERVER CALL ERRORS -->
    <string name="no_response">El servidor no responde</string>
    <string name="bad_register_response">Ese email ya está asociado a otra cuenta</string>
    <string name="bad_delete_response">Error! No se pudo eliminar su cuenta</string>
    <string name="bad_update_response">Error! No se pudo realizar el cambio</string>
    <string name="bad_login_response">Error! Revise los datos introducidos</string>
    <string name="bad_refresh_response">No se pudo actualizar la sesión</string>
    <string name="bad_creation_response">No se pudo crear la partida</string>
    <string name="bad_quit_response">No es posible salir de la partida</string>
    <string name="bad_read_response">No se han podido cargar los datos de su cuenta</string>
    <string name="bad_play_card_response">Error al jugar la carta, inténtelo de nuevo</string>
    <string name="price_already_collected">Ya ha recogido su premio de hoy</string>
    <string name="bad_friend_add_response">Error al añadir amigo</string>
    <string name="bad_delete_friend_response">Error al eliminar amigo</string>
    <string name="bad_friend_profile_response">Error al acceder al perfil de su amigo</string>
    <string name="login_detected_on_another_device">Se ha detectado un inicio de sesión en su cuenta desde otro dispositivo</string>
    <string name="cant_join">La sala está llena o no existe</string>
    <!-- SERVER CALL SUCCESS -->
    <string name="email_change_success">Ha actualizado su dirección de correo electrónico con éxito</string>
    <string name="password_change_success">Ha actualizado su contraseña con éxito</string>
    <string name="avatar_change_success">Ha actualizado su avatar con éxito</string>
    <string name="board_change_success">Ha actualizado su tablero de juego con éxito</string>
    <string name="cards_change_success">Ha actualizado el reverso de sus cartas con éxito</string>
    <string name="alias_change_success">Ha actualizado su alias con éxito</string>
    <string name="avatar_purchase_response">Avatar comprado</string>
    <string name="board_purchase_response">Tablero comprado</string>
    <string name="card_purchase_response">Reverso comprado</string>
    <string name="draw_card_success">Carta robada</string>
    <string name="refresh_success">Sesión actualizada</string>
    <string name="quit_game_success">Ha salido de la partida</string>
    <!-- INVITE EMAIL -->
    <string name="email_message">Escriba este código en la app para unirse a la partida: %1$s</string>
</resources>
