<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/private_match_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/private_match_toolbar"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:id="@+id/LoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="340dp"
            android:layout_height="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="340dp"
            android:layout_height="44dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="340dp"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="340dp"
            android:layout_height="44dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#2196F3"
            android:backgroundTintMode="src_over"
            android:gravity="center"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/not_registered"
            android:textColor="#000000" />

        <Button
            android:id="@+id/registrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#2196F3"
            android:backgroundTintMode="src_over"
            android:gravity="center"
            android:onClick="goToRegister"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>